--- a/source/Maestro.Wpf/Views/MaestroView.xaml
+++ b/source/Maestro.Wpf/Views/MaestroView.xaml
@@ -1,8 +1,8 @@
 ﻿<UserControl x:Class="Maestro.Wpf.Views.MaestroView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:Maestro.Wpf"
              xmlns:behaviors="http://schemas.microsoft.com/xaml/behaviors"
              xmlns:controls="clr-namespace:Maestro.Wpf.Controls"
@@ -16,7 +16,7 @@
              d:DesignWidth="560">
     <behaviors:Interaction.Triggers>
         <behaviors:EventTrigger
-            EventName="Loaded" 
+            EventName="Loaded"
             SourceObject="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=UserControl}}">
             <behaviors:InvokeCommandAction Command="{Binding LoadConfigurationCommand}"/>
         </behaviors:EventTrigger>
@@ -51,25 +51,10 @@
             <RowDefinition Height="32" />
         </Grid.RowDefinitions>
 
-        <!-- Unknown Buttons -->
-        <!-- TODO: Not implemented -->
-        <Grid Grid.Column="0" Grid.Row="0" Grid.RowSpan="3">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
-
-            <Button Grid.Row="0" Margin="0,0,0,1" IsEnabled="False">
-                <controls:Chevron Direction="Left" />
-            </Button>
-            <Button Grid.Row="1" Margin="0,1,0,1" IsEnabled="False">
-                <controls:Chevron Direction="Right" />
-            </Button>
-        </Grid>
-
         <!-- Header -->
-        <controls:BeveledBorder 
-            Grid.Column="1"
+        <controls:BeveledBorder
+            Grid.Column="0"
+            Grid.ColumnSpan="2"
             Grid.Row="0"
             BevelType="Outline"
             BorderThickness="{x:Static local:Theme.BeveledBorderThickness}"
@@ -118,7 +103,7 @@
                 <controls:BeveledLine Grid.Column="3" Width="{x:Static local:Theme.BeveledLineWidth}" Orientation="Vertical"/>
 
                 <!-- Runway Selector -->
-                <Button 
+                <Button
                     Grid.Column="4"
                     Padding="5"
                     Command="{Binding SelectedSequence.OpenTerminalConfigurationCommand}">
@@ -150,7 +135,7 @@
                                 <DataTemplate.Resources>
                                     <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource InteractiveTextStyle}"/>
                                 </DataTemplate.Resources>
-                                
+
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock x:Name="Separator" Text=" - " />
                                     <TextBlock Text="{Binding Identifier}"/>
@@ -159,7 +144,7 @@
                                 </StackPanel>
 
                                 <DataTemplate.Triggers>
-                                    
+
                                     <!-- Hide the separator on the first iteration -->
                                     <DataTrigger Binding="{Binding RelativeSource={RelativeSource PreviousData}}" Value="{x:Null}">
                                         <Setter Property="Visibility" TargetName="Separator" Value="Collapsed"/>
@@ -183,8 +168,9 @@
         </controls:BeveledBorder>
 
         <!-- Tab Bar -->
-        <StackPanel 
-            Grid.Column="1"
+        <StackPanel
+            Grid.Column="0"
+            Grid.ColumnSpan="2"
             Grid.Row="2"
             Orientation="Horizontal"
             Margin="2">
@@ -194,7 +180,7 @@
                     <Setter Property="Width" Value="48" />
                 </Style>
             </StackPanel.Resources>
-            
+
             <Button Content="DEPS" IsEnabled="False" Style="{StaticResource TabBarButtonStyle}"/>
             <Button Content="COORD" IsEnabled="False" Style="{StaticResource TabBarButtonStyle}" />
             <Button Command="{Binding SelectedSequence.OpenDesequencedWindowCommand}" Style="{StaticResource TabBarButtonStyle}">
@@ -252,9 +238,39 @@
         <Canvas
             Grid.Column="1"
             Grid.Row="3"
-            Name="LadderCanvas" 
+            Name="LadderCanvas"
             Margin="1"
-            ClipToBounds="True" />
+            ClipToBounds="True"
+            Background="Transparent"
+            ContextMenuOpening="OnContextMenuOpening"
+            MouseRightButtonDown="OnCanvasRightClick">
+            <Canvas.ContextMenu>
+                <ContextMenu>
+                    <ContextMenu.Style>
+                        <Style TargetType="ContextMenu" BasedOn="{StaticResource {x:Type ContextMenu}}">
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding IsCreatingSlot}" Value="True">
+                                    <Setter Property="Visibility" Value="Collapsed"/>
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </ContextMenu.Style>
+                    <MenuItem Header="Insert Flight" Command="{Binding InsertFlightCommand}" IsEnabled="False"/>
+                    <MenuItem Header="Insert Slot" Click="BeginInsertingSlot">
+                        <MenuItem.Style>
+                            <Style TargetType="MenuItem" BasedOn="{StaticResource {x:Type MenuItem}}">
+                                <Setter Property="Visibility" Value="Collapsed"/>
+                                <Style.Triggers>
+                                    <DataTrigger Binding="{Binding SelectedSequence.SelectedView.ViewMode}" Value="Approach">
+                                        <Setter Property="Visibility" Value="Visible"/>
+                                    </DataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </MenuItem.Style>
+                    </MenuItem>
+                </ContextMenu>
+            </Canvas.ContextMenu>
+        </Canvas>
 
         <!-- Footer -->
         <Grid Grid.Column="1" Grid.Row="4">
@@ -265,7 +281,6 @@
             </Grid.ColumnDefinitions>
 
             <StackPanel Grid.Column="0" Orientation="Vertical" HorizontalAlignment="Right" Margin="0,0,12,0">
-                
                 <TextBlock TextAlignment="Right">
                     <TextBlock.Style>
                         <Style TargetType="TextBlock" BasedOn="{StaticResource GenericTextStyle}">
@@ -278,7 +293,7 @@
                         </Style>
                     </TextBlock.Style>
                 </TextBlock>
-                
+
                 <TextBlock TextAlignment="Right">
                     <TextBlock.Style>
                         <Style TargetType="TextBlock" BasedOn="{StaticResource GenericTextStyle}">
@@ -298,7 +313,7 @@
             </controls:BeveledBorder>
 
             <StackPanel Grid.Column="2" HorizontalAlignment="Left" Margin="12,0,0,0">
-                
+
                 <TextBlock TextAlignment="Left">
                     <TextBlock.Style>
                         <Style TargetType="TextBlock" BasedOn="{StaticResource GenericTextStyle}">
@@ -311,7 +326,7 @@
                         </Style>
                     </TextBlock.Style>
                 </TextBlock>
-                
+
                 <TextBlock TextAlignment="Left">
                     <TextBlock.Style>
                         <Style TargetType="TextBlock" BasedOn="{StaticResource GenericTextStyle}">
@@ -324,7 +339,7 @@
                         </Style>
                     </TextBlock.Style>
                 </TextBlock>
-                
+
             </StackPanel>
         </Grid>
     </Grid>
